--- a/app/assets/stylesheets/application.css
+++ b/app/assets/stylesheets/application.css
@@ -1,19 +1,79 @@
-/*
- * This is a manifest file that'll be compiled into application.css, which will include all the files
- * listed below.
- *
- * Any CSS (and SCSS, if configured) file within this directory, lib/assets/stylesheets, or any plugin's
- * vendor/assets/stylesheets directory can be referenced here using a relative path.
- *
- * You're free to add application-wide styles to this file and they'll appear at the bottom of the
- * compiled file so the styles you add here take precedence over styles defined in any other CSS
- * files in this directory. Styles in this file should be added after the last require_* statement.
- * It is generally better to create a new file per style scope.
- *
- *= require_tree .
- *= require_self
- */
+body {
+  height: 100vh;
+  margin: 0;
+}
 
- .flash {
-  color: red;
- }
+a {
+  color: #333;
+  text-decoration: none;
+}
+
+h1 {
+  color: #343a40;
+  text-align: center;
+  padding: 20px 0;
+  margin: 0;
+}
+
+ul {
+  list-style: none;
+  padding: 0;
+  margin: 0 30%;
+  margin-top: 30px;
+}
+
+ul li {
+  display: flex;
+  justify-content: space-between;
+  background-color: #fff;
+  border: 1px solid #ced4da;
+  margin-bottom: 10px;
+  padding: 20px;
+}
+
+.button-container {
+  display: flex;
+  justify-content: center;
+  text-align: center;
+}
+
+.form-input {
+  width: 200px;
+  height: 48px;
+}
+
+.form-input input {
+  width: 100%;
+  height: 100%;
+  border-radius: 9999999px;
+  outline: 0;
+  border: none;
+  font-family: "Mona Sans", "Helvetica Neue", Helvetica, Arial, sans-serif;
+  font-size: 14px;
+  font-weight: 400;
+  line-height: 1;
+  box-sizing: border-box;
+  background: #f4f5fb;
+  padding: 0 24px 0 33px;
+  margin-right: 40px;
+}
+
+.link-button {
+  width: 100px;
+  height: 48px;
+  color: #fff;
+  border: none;
+  background: #333;
+  border-radius: 99999px;
+}
+
+.create-button {
+  display: block;
+  width: 100px;
+  height: 48px;
+  line-height: 48px;
+  color: #fff;
+  border: none;
+  background: #333;
+  border-radius: 99999px;
+}
